# stableagent-backend-oss

./: .agent-loop.yaml  .dockerignore  .env.criteria  .env.forse_analyze  .example.env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: proposal_materialized_view.sql  unified_discord.sql  unified_discourse_embeddings.sql  unified_embeddings.sql  unified_github_board.sql  unified_github_commits.sql  unified_telegram.sql  unified_votelist.sql
src/: __init__.py  main.py
src/auth/: COOKIE_CONFIGURATION.md  README.md  __init__.py  db.py  deps.py  example_usage.py  middleware.py  permissions.py  privy_client.py  router.py
src/config/: agent_config.yaml  common_settings.py  database_config.py  delegate_agent_settings.py  tool_models.py
src/criteria_llm_agent/: README.md  __init__.py  auth.py  database.py  db_connection.py  evaluator.py  example.py  graph.py  logger.py  main.py  model_factory.py  retrieval_endpoints.py  router.py  save_evaluation.py  startup.py  types.py
src/data_models/: analysis_schemas.py  delegate_schemas.py  schemas.py
src/form_llm_agent/: ENDPOINT_README.md  README.md  __init__.py  graph.py  json_extractor.py  main.py  model_factory.py  performance_logger.py  router.py  types.py
src/forse_analyze_agent/: README.md  __init__.py  graph.py  main.py  prompts.py  state.py
src/growth_chat/: __init__.py  exceptions.py  file_processor.py  graph.py  prompts.py  router.py  schemas.py  stream.py  utils.py
src/knowledge/: __init__.py  dao_catalog.py  database_context.py  ens_knowledge.py
src/llm/: factory.py
(+159 files in other folders)
